2008-05-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeWriter.cs (ComputeMaxStack): compute max
	stack more precisely. Based on a patch by Daniel Grunwald,
	Contains code from Cecil.FlowAnalysis.

	* Mono.Cecil.Cil/MethodBody.cs (Clone): make sure the
	instruction linked list is properly constructed.

2008-04-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/CodeReader.cs:
	* Mono.Cecil.Cil/ISymbolReader.cs:
		Move reading of debugging symbols where it's possible to
		reuse the existing Hashtable (offset, Instruction) in
		the debugging libraries. Change interface to allow
		passing the Hashtable.

2008-04-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.csproj
	* Mono.Cecil.dll.sources:
		Add Mono.Cecil.Cil/OpCodeNames.cs to the build.

	* Mono.Cecil.Cil/OpCodeNames.cs
	* Mono.Cecil.Cil/OpCode.cs
	* Mono.Cecil.Cil/OpCodes.cs:
		Reduce the OpCode struct size to 8 bytes (instead of 36).
		Based on the SRE.OpCode code found in corlib.

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/AssemblyDefinition.cs:
		Short circut loop when module is found.

2008-04-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/SecurityDeclarationReader.cs:
		Implement resolving of SecurityDeclarations.

2008-03-31  Jb Evain  <jbevain@novell.com>

	Integrate patches from Dzintars Avots <davots@coverity.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/DefaultImporter.cs
	  Mono.Cecil/MethodDefinition.cs:
		Fix generic parameter cloning to avoid issues when
		the constraint reference the parameter itself.

	* Mono.Cecil/MethodBody.cs (Clone): deals with switches.

	* Mono.Cecil/MethodBody.cs (Clone): clone the name of
	the local variables.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/ReflectionReader.cs:
		Avoid creating a BinaryReader+MemoryStream on LE archs for
		GetConstant. Saves about 400KB for Gendarme.